syntax = "proto3";

option go_package = "graduate/api/album/admin/v1;v1"; 

service Album {
    rpc ListAlbum(ListAlbumReq) returns (ListAlbumReply){}
    rpc GetAlbumById(GetAlbumByIdReq) returns (GetAlbumByIdReply){}
    rpc CreateOrders(CreateOrdersReq) returns (CreateOrdersReply){}
    rpc GetOrdersByUserId (GetOrdersByUserIdReq) returns (GetOrdersByUserReply){}
}

message GetOrdersByUserIdReq{
    int64 user_id =1;
}

message GetOrdersByUserReply{
    message Orders { 
        int64 user_id=1;
        int64 album_id=2;
        double price=3;
        string receiver =4;
        string address=5;
        string mobile=6;
    } 
    repeated Orders orders=1;
}



message CreateOrdersReq {
    message Orders { 
        int64 user_id=1;
        int64 album_id=2;
        double price=3;
        string receiver =4;
        string address=5;
        string mobile=6;
    }
    Orders orders=1;
}

message CreateOrdersReply {

}


 
message GetAlbumByIdReq{
    int64 id =1;
}

message GetAlbumByIdReply{
    message Album {
        int64 id =1;
        string title=2;
        string artist=3;
        double price=4;
        string create_at=5;
    }
    Album album =1;
}

message ListAlbumReq {
    int64 page_num =1;
    int64 page_size =2;
}
 
message ListAlbumReply{
    message Album {
        int64 id =1;
        string title=2;
        string artist=3;
        double price=4;
        string create_at=5;
    }
    int64 count=1;
    repeated Album albums=2;
}